# library-management

./: .gitignore  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  requirements-analysis.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
library_management/: __init__.py  cli.py  data_loader.py  database.py  library.py  models.py
scripts/: generate_book_data.py  verify_setup.py
tests/: __init__.py  conftest.py  test_data_loader.py  test_database.py  test_library.py  test_models.py
